--- a/Web3/templates/Workout.html
+++ b/Web3/templates/Workout.html
@@ -23,7 +23,7 @@
             </div>
           </div>
 
-          <div id="stopCircle" onmouseover="hoverFunction()" onmouseout="hoverOutFunction()"> <a href="http://localhost:5000/start">
+          <div id="stopCircle" onmouseover="hoverFunction()" onmouseout="hoverOutFunction()"> <a href="http://localhost:5000/summary">
             <div id="stopTriangle">
             </div>
             </a>
@@ -44,7 +44,6 @@
           </div>
         </div>
     </div>
-
 
     <div id="speed">
       <div id="speedCircle">
