--- a/Web3/templates/summary.html
+++ b/Web3/templates/summary.html
@@ -14,15 +14,53 @@
 
     <h1> My Workout Summary </h1>
 
-    <!-- <button onclick="startWorkout()">start</button> -->
-    <div id="container" >
-        <a href="http://localhost:5000/start">
-          <div id="reStartButton">
-            <div id="reStartTriangle">
-            </div>
-          </div>
+    <div id="options" >
+
+      <div id="newCircle" onmouseover="hoverFunction()" onmouseout="hoverOutFunction()"> <a href="http://localhost:5000/start">
+        <div id="newTriangle">
+        </div>
         </a>
+      </div>
     </div>
+
+
+<div id="container", class = "span">
+
+<div id="time">
+  <div id="timeCircle">
+        <p> Total Time </p>
+      <div id="timeText">
+        03:05
+      </div>
+      <div id="timeTextMeasure" class="subtext">
+       min:sec
+      </div>
+    </div>
+</div>
+
+<div id="speed">
+  <div id="speedCircle">
+      <p> Average speed </p>
+      <div id="speedText">
+        25
+      </div>
+      <div id="speedTextMeasure" class="subtext">
+       km/h
+      </div>
+    </div>
+</div>
+
+<div id="distance">
+  <div id="distanceCircle">
+  <p> Total distance </p>
+      <div id="distanceText">
+        100
+      </div>
+      <div id="distanceTextMeasure" class="subtext">
+         meters
+      </div>
+  </div>
+</div>
 
   </body>
 </html>
