adding meter to speed dashboard

--- a/Web3/templates/Workout.html
+++ b/Web3/templates/Workout.html
@@ -14,6 +14,7 @@
 
         <h1> My Workout </h1>
 
+
         <div id="options" >
 
           <div id="pauseCircle" onmouseover="hoverPause()" onmouseout="hoverOutPause()" onclick="pauseFunction()">
@@ -47,7 +48,9 @@
 
     <div id="speed">
       <div id="speedCircle">
+        <div id="halfCircle">
         <div id="needle">
+        </div>
         </div>
           <div id="speedText">
             25
@@ -75,11 +78,7 @@
     <div id="overlay", onclick="continueFunction()">
     </div>
 
-    <!-- <div id="continueButton", class = "pause">
-      <div id="continueTriangle", class = "pause">
-                    <h2> continue </h2>
-      </div>
-    </div> -->
+
 
   </body>
 </html>
