--- a/Web3/static/css/workout.css
+++ b/Web3/static/css/workout.css
@@ -21,14 +21,11 @@ h1 {
 
 
 #container{
-  width:90%;
-  height:90%;
+  width:100%;
+  height:100%;
   position: relative;
-  top: 250px;
-  /* background-color:white; */
-  margin: 0 auto;
+  top: 150px;
   text-align: center;
-  /* -webkit-transform-origin: top left; */
   }
 
 /* left measure: time */
@@ -71,7 +68,7 @@ h1 {
 /* middle measure: speedometer */
 
       #speed{
-      position: relative;
+      /* position: relative; */
       top: -100px;
       width:30%;
       height:30%;
@@ -108,7 +105,7 @@ h1 {
       } */
 
 #speedCircle{
-    position: relative;
+    /* position: relative; */
     display: inline-block;
     /* top: 8%; */
     width: 300px;
@@ -121,16 +118,30 @@ h1 {
     border-bottom-right-radius: 200px; /* 100px of height + 10px of border */
 }
 
+#halfCircle{
+    width: 260px;
+    height: 150px; /* as the half of the width */
+    background-color: transparent;
+    border-top-left-radius: 200px;  /* 100px of height + 10px of border */
+    border-top-right-radius: 200px; /* 100px of height + 10px of border */
+    border: 20px solid white;
+    border-bottom: 0;
+    border-style: dashed;
+    position: relative;
+    /* left: -10px; */
+    display: inline-block;
+    text-align: center;
+}
+
       #speedText{
         position: relative;
         font-size: 48px;
-        top: 150px;
         color: white;
       }
 
       #speedTextMeasure{
         position: relative;
-        top: 100px;
+        top: -50px;
         font-size: 24px;
         color: white;
       }
