--- a/WorkoutApp/templates/workoutVis.html
+++ b/WorkoutApp/templates/workoutVis.html
@@ -51,14 +51,21 @@
   </div>
         <script type="text/javascript" charset="utf-8">
             var socket = io();
+
+            //Distance & Speed
             var totalDis = 0;
             var currentSpeed = 0;
             var speedDisplay = 0;
             var disDisplay = 0;
-            var currentLat = 0;
-            var latDisplay = 0;
-            var currentLong = 0;
-            var longDisplay = 0;
+
+            //GPS latitude & longitude
+            var currentLat;
+            var latDisplay;
+            var currentLong;
+            var longDisplay;
+            var center;
+            var loc = {};
+            var locations = [];
 
             socket.on('connect', function() {
               // socket.emit('json', {data: 'I\'m connected!'});
@@ -134,7 +141,123 @@
                 //   var longtext = document.getElementById("longText");
                 //   longtext.innerHTML = (longDisplay);
 
+                function initMap() {
+                    center = {lat:currentLat, lng:currentLong};
+                    var map = new google.maps.Map(document.getElementById('map'), {
+                    zoom: 7,
+                    center: center,
+                    styles: [
+                        {elementType: 'geometry', stylers: [{color: '#242f3e'}]},
+                        {elementType: 'labels.text.stroke', stylers: [{color: '#242f3e'}]},
+                        {elementType: 'labels.text.fill', stylers: [{color: '#746855'}]},
+                        {
+                          featureType: 'administrative.locality',
+                          elementType: 'labels.text.fill',
+                          stylers: [{color: '#d59563'}]
+                        },
+                        {
+                          featureType: 'poi',
+                          elementType: 'labels.text.fill',
+                          stylers: [{color: '#d59563'}]
+                        },
+                        {
+                          featureType: 'poi.park',
+                          elementType: 'geometry',
+                          stylers: [{color: '#263c3f'}]
+                        },
+                        {
+                          featureType: 'poi.park',
+                          elementType: 'labels.text.fill',
+                          stylers: [{color: '#6b9a76'}]
+                        },
+                        {
+                          featureType: 'road',
+                          elementType: 'geometry',
+                          stylers: [{color: '#38414e'}]
+                        },
+                        {
+                          featureType: 'road',
+                          elementType: 'geometry.stroke',
+                          stylers: [{color: '#212a37'}]
+                        },
+                        {
+                          featureType: 'road',
+                          elementType: 'labels.text.fill',
+                          stylers: [{color: '#9ca5b3'}]
+                        },
+                        {
+                          featureType: 'road.highway',
+                          elementType: 'geometry',
+                          stylers: [{color: '#746855'}]
+                        },
+                        {
+                          featureType: 'road.highway',
+                          elementType: 'geometry.stroke',
+                          stylers: [{color: '#1f2835'}]
+                        },
+                        {
+                          featureType: 'road.highway',
+                          elementType: 'labels.text.fill',
+                          stylers: [{color: '#f3d19c'}]
+                        },
+                        {
+                          featureType: 'transit',
+                          elementType: 'geometry',
+                          stylers: [{color: '#2f3948'}]
+                        },
+                        {
+                          featureType: 'transit.station',
+                          elementType: 'labels.text.fill',
+                          stylers: [{color: '#d59563'}]
+                        },
+                        {
+                          featureType: 'water',
+                          elementType: 'geometry',
+                          stylers: [{color: '#17263c'}]
+                        },
+                        {
+                          featureType: 'water',
+                          elementType: 'labels.text.fill',
+                          stylers: [{color: '#515c6d'}]
+                        },
+                        {
+                          featureType: 'water',
+                          elementType: 'labels.text.stroke',
+                          stylers: [{color: '#17263c'}]
+                        }
+                      ]
+                    });
+
+                    var dot = new google.maps.Circle({
+                      strokeColor: '#ad343e',
+                      strokeOpacity: 0.8,
+                      strokeWeight: 1,
+                      fillColor: '#ad343e',
+                      fillOpacity: 0.8,
+                      map:map,
+                      center: center,
+                      radius: 10
+                    })
+
+                  locations.push(center);
+
+                function updatePosition(){
+                    loc = {lat:currentLat,lng:currentLong};
+                    locations.push(loc);
+
+                    var path = new google.maps.Polyline({
+                      path: locations,
+                      geodesic: true,
+                      strokeColor: '#ad343e',
+                      strokeOpacity: 1.0,
+                      strokeWeight: 2
+                    })
+                    path.setMap(map);
+                }
+                setInterval(updatePosition,1000);
+              }
           </script>
+
           <script type="text/javascript" charset="utf-8">
             var startTime = Date.now();
             var second = 1000;
@@ -167,5 +290,8 @@
             window.onload = showTime();
             </script>
           <!-- <button type="button" onclick="stopTimer()">Stop</button> -->
+          //GoogleMap javascript API
+          <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDujaeWrLEEsvjjXTAXrACL0AjP9iAKQRk&libraries=drawing&callback=initMap"
+                  async defer></script>
     </body>
 </html>
