--- a/WorkoutApp/static/css/style3.css
+++ b/WorkoutApp/static/css/style3.css
@@ -185,6 +185,11 @@ h1 {
       color: pink;
     }
 
+    #map {
+        width: 100%;
+        height: 400px;
+        background-color: grey;
+    }
 
 @-webkit-keyframes move {
   0% {
