--- a/WorkoutApp/templates/workoutVis.html
+++ b/WorkoutApp/templates/workoutVis.html
@@ -47,7 +47,7 @@
         </div>
       </div>
   </div>
-
+  <div id="map"></div>
   </div>
         <script type="text/javascript" charset="utf-8">
             var socket = io();
