--- a/WorkoutApp/templates/workoutVis.html
+++ b/WorkoutApp/templates/workoutVis.html
@@ -244,7 +244,7 @@
                 function updatePosition(){
                     loc = {lat:currentLat,lng:currentLong};
                     locations.push(loc);
-
+                    console.log(loc);
                     var path = new google.maps.Polyline({
                       path: locations,
                       geodesic: true,
