--- a/WorkoutApp/templates/workoutVis.html
+++ b/WorkoutApp/templates/workoutVis.html
@@ -59,10 +59,10 @@
             var disDisplay = 0;
 
             //GPS latitude & longitude
-            var currentLat;
-            var latDisplay;
-            var currentLong;
-            var longDisplay;
+            var currentLat=0;
+            var latDisplay=0;
+            var currentLong=0;
+            var longDisplay=0;
             var center;
             var loc = {};
             var locations = [];
@@ -256,6 +256,7 @@
                 }
                 setInterval(updatePosition,1000);
               }
+              window.onload(initMap);
           </script>
 
           <script type="text/javascript" charset="utf-8">
