--- a/WorkoutApp/static/css/style3.css
+++ b/WorkoutApp/static/css/style3.css
@@ -189,6 +189,7 @@ h1 {
         width: 100%;
         height: 400px;
         background-color: grey;
+        top:200px;
     }
 
 @-webkit-keyframes move {
