--- a/Web3/templates/Workout.html
+++ b/Web3/templates/Workout.html
@@ -10,10 +10,9 @@
 
   </head>
 
-  <body>
+  <body onload="draw(120);">
 
         <h1> My Workout </h1>
-
 
         <div id="options" >
 
@@ -48,7 +47,8 @@
 
     <div id="speed">
       <div id="speedCircle">
-        <div id="halfCircle">
+        <canvas class="canvas" id="myCanvas" width="300" height="300">
+        Your browser does not support the HTML5 canvas tag.</canvas>
         <div id="needle">
         </div>
         </div>
@@ -60,7 +60,6 @@
            km/h
           </div>
         </div>
-    </div>
 
     <div id="distance">
       <div id="distanceCircle">
@@ -77,8 +76,6 @@
 
     <div id="overlay", onclick="continueFunction()">
     </div>
-
-
 
   </body>
 </html>
