--- a/WorkoutApp/templates/workoutVis.html
+++ b/WorkoutApp/templates/workoutVis.html
@@ -59,9 +59,9 @@
             var disDisplay = 0;
 
             //GPS latitude & longitude
-            var currentLat;
+            var currentLat=0;
             var latDisplay;
-            var currentLong;
+            var currentLong=0;
             var longDisplay;
             var center;
             var loc = {};
@@ -256,7 +256,7 @@
                 }
                 setInterval(updatePosition,1000);
               }
-              window.onload(initMap);
+              //window.onload(initMap);
           </script>
 
           <script type="text/javascript" charset="utf-8">
