--- a/WorkoutApp/templates/workoutVis.html
+++ b/WorkoutApp/templates/workoutVis.html
@@ -256,7 +256,7 @@
                 }
                 setInterval(updatePosition,1000);
               }
-              window.onload(initMap);
+              initMap();
           </script>
 
           <script type="text/javascript" charset="utf-8">
