--- a/WorkoutApp/templates/workoutVis.html
+++ b/WorkoutApp/templates/workoutVis.html
@@ -140,7 +140,7 @@
                 // function setLong(){
                 //   var longtext = document.getElementById("longText");
                 //   longtext.innerHTML = (longDisplay);
-
+                if (currentLat>0){
                 function initMap() {
                     center = {lat:currentLat, lng:currentLong};
                     var map = new google.maps.Map(document.getElementById('map'), {
@@ -256,7 +256,7 @@
                 }
                 setInterval(updatePosition,1000);
               }
-              //window.onload(initMap);
+            }
           </script>
 
           <script type="text/javascript" charset="utf-8">
