--- a/WorkoutApp/templates/workoutVis.html
+++ b/WorkoutApp/templates/workoutVis.html
@@ -255,8 +255,8 @@
                 }
                 setInterval(updatePosition,1000);
               }
-              
-              if (currentLat>0){
+
+              if (currentLat !== 0){
               initMap();
             }
 
