--- a/WorkoutApp/templates/workoutVis.html
+++ b/WorkoutApp/templates/workoutVis.html
@@ -59,9 +59,9 @@
             var disDisplay = 0;
 
             //GPS latitude & longitude
-            var currentLat=0;
+            var currentLat;
             var latDisplay;
-            var currentLong=0;
+            var currentLong;
             var longDisplay;
             var center;
             var loc = {};
@@ -140,6 +140,7 @@
                 // function setLong(){
                 //   var longtext = document.getElementById("longText");
                 //   longtext.innerHTML = (longDisplay);
+                if (currentLat !== 0){
                 function initMap() {
                     center = {lat:currentLat, lng:currentLong};
                     var map = new google.maps.Map(document.getElementById('map'), {
@@ -255,10 +256,8 @@
                 }
                 setInterval(updatePosition,1000);
               }
-
-              if (currentLat !== 0){
-              initMap();
             }
+
 
           </script>
 
