--- a/WorkoutApp/templates/workoutVis.html
+++ b/WorkoutApp/templates/workoutVis.html
@@ -59,9 +59,9 @@
             var disDisplay = 0;
 
             //GPS latitude & longitude
-            var currentLat;
+            var currentLat = 0;
             var latDisplay;
-            var currentLong;
+            var currentLong = 0;
             var longDisplay;
             var center;
             var loc = {};
