added map div and css files to folder

--- a/WorkoutApp/templates/Workout.html
+++ b/WorkoutApp/templates/Workout.html
@@ -76,7 +76,7 @@
         </div>
     </div>
     </div>
-
+    <div id="map"></div>
     <div id="overlay", onclick="continueFunction()">
     </div>
     <script type="text/javascript" charset="utf-8">
