moved maps script tag to head

--- a/WorkoutApp/templates/Workout.html
+++ b/WorkoutApp/templates/Workout.html
@@ -10,6 +10,7 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
                     integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I="
                     crossorigin="anonymous"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDujaeWrLEEsvjjXTAXrACL0AjP9iAKQRk&libraries=drawing&callback=initMap" async defer></script>
 
   </head>
 
@@ -324,8 +325,7 @@
         window.onload = showTime();
         </script>
       <!-- <button type="button" onclick="stopTimer()">Stop</button> -->
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDujaeWrLEEsvjjXTAXrACL0AjP9iAKQRk&libraries=drawing&callback=initMap"
-              async defer></script>
+
 
   </body>
 </html>
