--- a/WorkoutApp/templates/Workout.html
+++ b/WorkoutApp/templates/Workout.html
@@ -90,13 +90,13 @@
         var disDisplay = 0;
 
         //GPS latitude & longitude
-        var currentLat=0;
+        var currentLat;
         var latDisplay;
-        var currentLong=0;
+        var currentLong;
         var longDisplay;
-        var center;
         var loc = {};
         var locations = [];
+        //window.map = undefined;
 
         socket.on('connect', function() {
           // socket.emit('json', {data: 'I\'m connected!'});
@@ -172,7 +172,7 @@
             //   var longtext = document.getElementById("longText");
             //   longtext.innerHTML = (longDisplay);
 
-            function initMap() {
+            var map = function initMap() {
                 center = {lat:currentLat, lng:currentLong};
                 var map = new google.maps.Map(document.getElementById('map'), {
                 zoom: 15,
@@ -285,11 +285,17 @@
                 })
                 path.setMap(map);
             }
+
+            // function moveToLocation(currenLat, currentLong){
+            //   const center = {lat:currentLat, lng: currentLong};
+            //   // using global variable:
+            //   window.map.panTo(center);
+            // }
+
             setInterval(updatePosition,1000);
+            // setInterval(moveToLocation,1000);
           }
 
-          initMap();
-          //window.onload(initMap);
 
       </script>
 
