--- a/WorkoutApp/templates/Workout.html
+++ b/WorkoutApp/templates/Workout.html
@@ -172,7 +172,8 @@
             //   var longtext = document.getElementById("longText");
             //   longtext.innerHTML = (longDisplay);
 
-            var map = function initMap() {
+
+            function initMap() {
                 center = {lat:currentLat, lng:currentLong};
                 var map = new google.maps.Map(document.getElementById('map'), {
                 zoom: 15,
