--- a/WorkoutApp/templates/Workout.html
+++ b/WorkoutApp/templates/Workout.html
@@ -90,9 +90,9 @@
         var disDisplay = 0;
 
         //GPS latitude & longitude
-        var currentLat;
+        var currentLat = 0;
         var latDisplay;
-        var currentLong;
+        var currentLong = 0;
         var longDisplay;
         var loc = {};
         var locations = [];
