--- a/WorkoutApp/static/css/summary.css
+++ b/WorkoutApp/static/css/summary.css
@@ -165,4 +165,11 @@ h1 {
       border-width: 10px 0 10px 20px;
       border-color: transparent transparent transparent white;
       display: inline-block;
-      }
+    }
+
+    #map {
+        width: 100%;
+        height: 400px;
+        background-color: grey;
+        top:200px;
+    }
