--- a/WorkoutApp/static/css/workout.css
+++ b/WorkoutApp/static/css/workout.css
@@ -292,3 +292,11 @@ h1 {
         margin-top: 100px;
         visibility: hidden;
 }
+
+
+#map {
+    width: 100%;
+    height: 400px;
+    background-color: grey;
+    top:200px;
+}
