--- a/WorkoutApp/templates/Workout.html
+++ b/WorkoutApp/templates/Workout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-        <title>Our App</title>
+        <title>My Workout</title>
         <link rel="stylesheet" type="text/css"
         href="{{ url_for('static', filename='css/workout.css') }}">
 
@@ -77,7 +77,7 @@
     </div>
     <div id="map"></div>
     </div>
-    
+
     <div id="overlay", onclick="continueFunction()">
     </div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDujaeWrLEEsvjjXTAXrACL0AjP9iAKQRk&libraries=drawing&callback=initMap" async defer></script>
