--- a/WorkoutApp/templates/Workout.html
+++ b/WorkoutApp/templates/Workout.html
@@ -278,7 +278,7 @@
                 loc = {lat:currentLat,lng:currentLong};
                 locations.push(loc);
                 console.log(loc);
-                map.setCenter(loc);
+                // map.setCenter(loc);
                 var path = new google.maps.Polyline({
                   path: locations,
                   geodesic: true,
