commented out dot (not currently needed) - functional ver as of 25/10/19

--- a/WorkoutApp/templates/Workout.html
+++ b/WorkoutApp/templates/Workout.html
@@ -261,16 +261,16 @@
                   ]
                 });
 
-                var dot = new google.maps.Circle({
-                  strokeColor: '#ad343e',
-                  strokeOpacity: 0.8,
-                  strokeWeight: 1,
-                  fillColor: '#ad343e',
-                  fillOpacity: 0.8,
-                  map:map,
-                  center: center,
-                  radius: 3
-                })
+                // var dot = new google.maps.Circle({
+                //   strokeColor: '#ad343e',
+                //   strokeOpacity: 0.8,
+                //   strokeWeight: 1,
+                //   fillColor: '#ad343e',
+                //   fillOpacity: 0.8,
+                //   map:map,
+                //   center: center,
+                //   radius: 3
+                // })
 
               // locations.push(center);
 
