--- a/Web3/static/css/summary.css
+++ b/Web3/static/css/summary.css
@@ -29,34 +29,35 @@ h1 {
   font-style: italic;
 }
 
+
+
+
 #container{
-  width:90%;
-  height:90%;
+  width:100%;
+  height:100%;
   position: relative;
-  top: 250px;
-  /* background-color:white; */
-  margin: 0 auto;
+  top: 200px;
   text-align: center;
-  /* -webkit-transform-origin: top left; */
   }
 
 /* left measure: time */
       #time{
-      position: relative;
-      top: 60%;
-      width:30%;
-      height:30%;
-      text-align: center;
-      display: inline-block;
+        position: relative;
+        display: inline-block;
+        top: 80px;
+        left: 50px;
+        width:30%;
+        height:30%;
+        text-align: center;
       }
 
       #timeCircle{
         position: relative;
         display: inline-block;
         top: 8%;
-        width: 200px;
-        height: 200px;
-        background-color: #2dcb74;
+        width: 180px;
+        height: 180px;
+        background-color: #bcabae;
         box-shadow: 0px 0px 10px black;
         border-top-left-radius: 100px;  /* 100px of height + 10px of border */
         border-top-right-radius: 100px; /* 100px of height + 10px of border */
@@ -64,53 +65,103 @@ h1 {
         border-bottom-right-radius: 100px; /* 100px of height + 10px of border */
       }
 
+
+      #timeContainer{
+        position: relative;
+        display: inline-block;
+        text-align: center;
+        top:-130px;
+      }
+
+      #totalTime{
+          position: relative;
+          font-size: 15px;
+          color: white;
+      }
+
       #timeText{
         position: relative;
-        font-size: 48px;
+        font-size: 35px;
         color: white;
       }
 
-/* middle measure: speedometer */
-
-      #speed{
-      /* position: relative; */
-      width:30%;
-      height:30%;
-      text-align: center;
-      display: inline-block;
+      #timeTextMeasure{
+        position: relative;
+        font-size: 15px;
+        color: white;
       }
 
+
+
+
+      #speed{
+        position: relative;
+        top:100px;
+        display: inline-block;
+        width:250px;
+        height:250px;
+        text-align: center;
+      }
+
+      /* middle measure: speedometer */
+      #myCanvas{
+          position: relative;
+          /* display: inline-block; */
+          text-align: center;
+      }
 
 #speedCircle{
     position: relative;
     display: inline-block;
-    /* top: 8%; */
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
     box-shadow: 0px 0px 20px black;
-    background-color: #2dcb74;
+    background-color: #bcabae;
     border-top-left-radius: 200px;  /* 100px of height + 10px of border */
     border-top-right-radius: 200px; /* 100px of height + 10px of border */
     border-bottom-left-radius: 200px;  /* 100px of height + 10px of border */
     border-bottom-right-radius: 200px; /* 100px of height + 10px of border */
 }
 
-      #speedText{
+
+      #speedContainer{
         position: relative;
         display: inline-block;
-        font-size: 100px;
+        text-align: center;
+        top:-180px;
+      }
+
+      #totalSpeed{
+          position: relative;
+          font-size: 20px;
+          color: white;
+      }
+
+      #speedText{
+        position: relative;
+        font-size: 50px;
         color: white;
       }
 
-/* right measure: distance */
+      #speedTextMeasure{
+        position: relative;
+        font-size: 20px;
+        color: white;
+      }
 
+
+
+
+
+/* right indicator: distance */
     #distance{
-    position: relative;
-    top: 100%;
-    width:30%;
-    height:30%;
-    text-align: center;
-    display: inline-block;
+      position: relative;
+      display: inline-block;
+      top:80px;
+      right: 50px;
+      width:30%;
+      height:30%;
+      text-align: center;
     }
 
     #distanceCircle{
@@ -118,23 +169,46 @@ h1 {
       display: inline-block;
       box-shadow: 0px 0px 10px black;
       top: 8%;
-      width: 200px;
-      height: 200px;
+      width: 180px;
+      height: 180px;
       background-color: white;
       border-top-left-radius: 100px;  /* 100px of height + 10px of border */
       border-top-right-radius: 100px; /* 100px of height + 10px of border */
       border-bottom-left-radius: 100px;  /* 100px of height + 10px of border */
       border-bottom-right-radius: 100px; /* 100px of height + 10px of border */
-      background-color: #2dcb74;
+      background-color: #bcabae;
+    }
+
+
+    #distContainer{
+      position: relative;
+      display: inline-block;
+      text-align: center;
+      top:-130px;
+    }
+
+    #totalDist{
+        position: relative;
+        font-size: 15px;
+        color: white;
     }
 
     #distanceText{
       position: relative;
-      font-size: 48px;
+      font-size: 35px;
+      color: white;
+    }
+
+    #distanceTextMeasure{
+      position: relative;
+      font-size: 15px;
       color: white;
     }
 
 
+
+
+/* //pause and stop buttons// */
   #options {
     position: relative;
     top:20px;
@@ -142,27 +216,31 @@ h1 {
     text-align: center;
   }
 
-
-    #newCircle{
-      width: 50px;
-      height: 50px;
-      background-color: #eca72c;
-      text-align: center;
-      display: inline-block;
-      margin-bottom: 50px;
-      border: 2px;
-      border-top-left-radius: 150px;  /* 100px of height + 10px of border */
-      border-top-right-radius: 150px; /* 100px of height + 10px of border */
-      border-bottom-left-radius: 150px;  /* 100px of height + 10px of border */
-      border-bottom-right-radius: 150px; /* 100px of height + 10px of border */
-    }
-
-    #newTriangle{
-      width: 0;
-      height: 0;
-      margin-top: 30%;
-      border-style: solid;
-      border-width: 10px 0 10px 20px;
-      border-color: transparent transparent transparent white;
-      display: inline-block;
+      #newCircle{
+        width: 50px;
+        height: 50px;
+        background-color: #eca72c;
+        text-align: center;
+        display: inline-block;
+        margin-top: -130px;
+        margin-bottom: 50px;
+        /* border: 2px; */
+        /* border-color: #eca72c; */
+        border-top-left-radius: 150px;  /* 100px of height + 10px of border */
+        border-top-right-radius: 150px; /* 100px of height + 10px of border */
+        border-bottom-left-radius: 150px;  /* 100px of height + 10px of border */
+        border-bottom-right-radius: 150px; /* 100px of height + 10px of border */
       }
+
+      #newTriangle{
+        width: 0;
+        height: 0;
+        border-top: 15px solid transparent;
+        border-left: 30px solid white;
+        border-bottom: 15px solid transparent;
+        display: inline-block;
+        margin-top:9px;
+        margin-left: 5px;
+        /* margin-top: 100px; */
+        /* visibility: hidden; */
+        }
