--- a/Web3/templates/summary.html
+++ b/Web3/templates/summary.html
@@ -10,57 +10,85 @@
 
   </head>
 
-  <body>
+  <body onload="draw(120);">
 
-    <h1> My Workout Summary </h1>
+        <h1> My Workout Summary </h1>
 
-    <div id="options" >
-
-      <div id="newCircle" onmouseover="hoverFunction()" onmouseout="hoverOutFunction()"> <a href="http://localhost:5000/start">
-        <div id="newTriangle">
+        <div id="options" >
+          <div id="newCircle" onmouseover="hoverPause()" onmouseout="hoverOutPause()">
+            <a href="http://localhost:5000/start">
+            <div id="newTriangle">
+            </div>
+            </a>
+          </div>
         </div>
-        </a>
+
+
+  <div id="container", class = "span">
+
+    <div id="time">
+      <div id="timeCircle">
+        <canvas class="canvasTime" id="canvasTime" width="180" height="180">
+        </canvas>
+        <div id="timeContainer">
+          <div id="totalTime">
+            Total Time
+          </div>
+            <div id="timeText">
+              03:05
+            </div>
+            <div id="timeTextMeasure">
+             min:sec
+            </div>
+          </div>
+        </div>
+    </div>
+
+    <div id="speed">
+      <div id="speedCircle">
+          <canvas class="canvas" id="myCanvas" width="250" height="250">
+        Your browser does not support the HTML5 canvas tag.
+          </canvas>
+              <div id="needle">
+              </div>
+                <div id="speedContainer">
+                    <div id="totalSpeed">
+                        Average Speed
+                    </div>
+                    <div id="speedText">
+                        25
+                    </div>
+                    <div id="speedTextMeasure">
+                        km/h
+                    </div>
+                </div>
+      </div>
+
+        </div>
+
+    <div id="distance">
+      <div id="distanceCircle">
+        <canvas class="canvas" id="myDist" width="180" height="180">
+        </canvas>
+        <div id="distContainer" >
+          <div id="totalDist">
+            Total Distance
+          </div>
+          <div id="distanceText">
+            100
+          </div>
+          <div id="distanceTextMeasure">
+           meters
+          </div>
+        </div>
       </div>
     </div>
 
 
-<div id="container", class = "span">
-
-<div id="time">
-  <div id="timeCircle">
-        <p> Total Time </p>
-      <div id="timeText">
-        03:05
-      </div>
-      <div id="timeTextMeasure" class="subtext">
-       min:sec
-      </div>
     </div>
-</div>
 
-<div id="speed">
-  <div id="speedCircle">
-      <p> Average speed </p>
-      <div id="speedText">
-        25
-      </div>
-      <div id="speedTextMeasure" class="subtext">
-       km/h
-      </div>
+    <div id="overlay", onclick="continueFunction()">
     </div>
-</div>
-
-<div id="distance">
-  <div id="distanceCircle">
-  <p> Total distance </p>
-      <div id="distanceText">
-        100
-      </div>
-      <div id="distanceTextMeasure" class="subtext">
-         meters
-      </div>
-  </div>
-</div>
 
   </body>
 </html>
